# code/lambda-scripts/api.yml
@@ -35,13 +35,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Response'
-          headers:
-            Access-Control-Allow-Origin:
-              $ref: '#/components/headers/Access-Control-Allow-Origin'
-            Access-Control-Allow-Methods:
-              $ref: '#/components/headers/Access-Control-Allow-Methods'
-            Access-Control-Allow-Headers:
-              $ref: '#/components/headers/Access-Control-Allow-Headers'
         '400':
           description: Invalid Request
         '500':
@@ -71,13 +64,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Response'
-          headers:
-            Access-Control-Allow-Origin:
-              $ref: '#/components/headers/Access-Control-Allow-Origin'
-            Access-Control-Allow-Methods:
-              $ref: '#/components/headers/Access-Control-Allow-Methods'
-            Access-Control-Allow-Headers:
-              $ref: '#/components/headers/Access-Control-Allow-Headers'
         '400':
           description: Invalid Request
         '500':
