# code/lambda-server/src/main/java/ufsc/tcc/cco/server/ServerApplication.java
@@ -8,6 +8,8 @@ import database.Item;
 import database.Repository;
 import model.Orders;
 import utils.DatasetMethod;
+import utils.Headers;
+
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
@@ -44,14 +46,9 @@ public class ServerApplication implements
         item.setTimeDeserialize(timeDeserialize);
         Repository.getInstance().update(item);
 
-        Map<String, String> header = new HashMap<>();
-        header.put("Content-Type", "application/json");
-        header.put("Access-Control-Allow-Origin", "*");
-        header.put("Access-Control-Allow-Headers", "*");
-        header.put("Access-Control-Allow-Methods", "OPTIONS,POST,GET");
         return new APIGatewayProxyResponseEvent()
                 .withStatusCode(200)
-                .withHeaders(header)
+                .withHeaders(new Headers().getHeaders())
                 .withBody(null);
     }
 }
